--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Amadeus Android</string>
     <string name="edit_destination">Location (IATA)</string>
+    <string name="search_location">Search</string>
+    <string name="location">Location</string>
     <string name="date_arrival">select dates</string>
 </resources>
