--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="location">Location</string>
     <string name="date_arrival">select dates</string>
     <string name="select_location">select destination</string>
+    <string name="book">book</string>
 </resources>
