--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="location">Location</string>
     <string name="date_arrival">select dates</string>
     <string name="select_location">select destination</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
+    <string name="phone">Phone</string>
+    <string name="email">Email</string>
     <string name="book">book</string>
+    <string name="error">Required</string>
 </resources>
